syntax = "proto3";

package simple;

option go_package = "a.yandex-team.ru/taxi/uservices/userver/libraries/proto-structs/codegen-tests/proto/simple;simple";

import "simple/subdirectory/subdirectory.proto";
import "simple/subdirectory/separate_enum.proto";

message SimpleStruct {
    int32 some_integer = 1;
    optional string some_text = 2;
    bool is_condition = 3;

    oneof something {
        int64 foo = 4;
        string bar = 5;
    };

    repeated bytes some_bytes = 6;

    message NestedStruct {
        message NestedStruct2 {

            enum InnerEnum1 {
                FOO_VAL = 0;
                BAR_VAL = 1;
            }

            string swag2 = 1;
            InnerEnum1 swag3 = 2;
        }

        string swag = 1;
    }

    enum InnerEnum2 {
        FOO_VAL = 0;
        BAR_VAL = 1;
    }

    InnerEnum2 inner_enum = 7;
}

message SecondStruct {
    string str = 1;

    simple.subdirectory.SubdirStruct subdir_struct = 2;
    simple.subdirectory.MyEnum subdir_enum = 3;
    simple.subdirectory.SeparateEnum separate_enum = 4;
}

enum GlobalEnum {
    FOO_VAL = 0;
    BAR_VAL = 1;
}
